Use "".formatted instead of String.format()