@@ -120,6 +120,6 @@ public class ApplicationForLeaveStatisticsPageRequest extends AbstractPageReques
 
     @Override
     public String toString() {
-        return String.format("Page request [number: %d, size %d, sort: %s]", getPageNumber(), getPageSize(), getSort());
+        return "Page request [number: %d, size %d, sort: %s]".formatted(getPageNumber(), getPageSize(), getSort());
     }
 }
