@@ -90,9 +90,9 @@ class BackupCreateServiceIT {
         sequences.forEach(sequence -> {
             final String schemaName = (String) sequence.get("schemaname");
             final String sequenceName = (String) sequence.get("sequencename");
-            final String getMinValueSql = String.format("SELECT min_value FROM pg_sequences WHERE schemaname = '%s' AND sequencename = '%s'", schemaName, sequenceName);
+            final String getMinValueSql = "SELECT min_value FROM pg_sequences WHERE schemaname = '%s' AND sequencename = '%s'".formatted(schemaName, sequenceName);
             final Long minValue = jdbcTemplate.queryForObject(getMinValueSql, Long.class);
-            final String resetSequenceSql = String.format("ALTER SEQUENCE %s.%s RESTART WITH %d", schemaName, sequenceName, minValue);
+            final String resetSequenceSql = "ALTER SEQUENCE %s.%s RESTART WITH %d".formatted(schemaName, sequenceName, minValue);
             jdbcTemplate.execute(resetSequenceSql);
         });
     }
